<resources>
    <string name="app_name">DurianVideo</string>

    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="compete">竞技</string>
    <string name="mine">我的</string>

    <string name="discover_search">搜索</string>
    <string name="discover_attention">关注</string>
    <string name="discover_channel">频道</string>
    <string name="search_back">返回</string>
    <string name="search_video">视频</string>
    <string name="search_user">用户</string>

    <string name="recommendlayout">这些小主都可以约哦</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
