<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_search"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="#fff"
tools:context="qf.com.durianvideo.activity.SearchActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/search_tv_back"
        android:onClick="ClickofSearch"
        android:text="@string/search_back"/>
    <EditText
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:textColor="#000"
        android:id="@+id/search_et_search"
        android:background="@drawable/shape_corner"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/discover_search"
        android:onClick="ClickofSearch"
        android:id="@+id/search_tv_search"
        android:textColor="#FF8080"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FF8080"
            android:text="@string/search_video"
            android:onClick="ClickofSearch"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FF8080"
            android:id="@+id/search_v_video"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FF8080"
            android:text="@string/search_user"
            android:onClick="ClickofSearch"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FF8080"
            android:visibility="gone"
            android:id="@+id/search_v_user"/>
    </LinearLayout>
</LinearLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    android:id="@+id/search_fl_replace">
</FrameLayout>
</LinearLayout>
